# docs/swagger.json
@@ -110,7 +110,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "RegisterUser"
+                    "Users"
                 ],
                 "summary": "ユーザー情報を登録",
                 "parameters": [
@@ -129,6 +129,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/users.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/users.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/users.ErrorResponse"
                         }
                     }
                 }
@@ -174,6 +186,17 @@
                 }
             }
         },
+        "users.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "users.Response": {
             "type": "object",
             "properties": {
@@ -201,6 +224,9 @@
                     "type": "boolean"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "password_hash": {
                     "type": "string"
                 },
                 "period": {
@@ -237,17 +263,17 @@
         "users.UsersResponse": {
             "type": "object",
             "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/users.UserResponseModel"
+                    }
+                },
                 "pages": {
                     "type": "integer"
                 },
                 "total_count": {
                     "type": "integer"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/users.UserResponseModel"
-                    }
                 }
             }
         }
